version 0.84.03
	Android: adding icon
	about/version code cleanup
	Testing suport for K-70
	K-70, K-1 selected_af_point hack
	Android: about window
	K-1 bufmask testing
	--dangerous hack
	GUI: Status hexdump
	New status field: auto_bracket_picture_counter (thx jmozmoz)
	GUI: Editable bulb exposure time
	GUI: Hide AF points if camera has more than 11
	K-S1 bugfix

version 0.84.02 ( 2016-10-31 )
	Android code cleanup
	Possibility to read lens database from latest exiftool
	Updating lens info database ( exiftool 10.300 )
	Testing support for K-1
	Small speedup
	Increase Android 5 compatibility
	Android version requires Android 4.1 (http://stackoverflow.com/a/26422855/21348 )

version 0.84.00 ( 2016-05-09 )
	servermode subcommand: set_shutter_speed, set_iso, usleep
	servermode: avoid segmentation fault if camera is not connected
	android: bracketing (if set on the camera)
	openbsd port ( thx Hannu Vuolasaho )
	K-500 support
	Android preferences: showPreview, saveDir
	Android cheching directory
	Changing android default directory to /mnt/sdcard

version 0.83.00 ( 2016-01-29 )
	Limited K-3 II support (Testing)
	Makefile cleanup (exiftool)
	K-3 support ( thx Tao Wang )
	Eliminate GTK settings window closing warning
	Limited K-S1, K-S2 support ( thx Tao Wang )
	Eliminate segmentation fault (non-root Linux usage)
	autosave, save as dialog cancel bugfix
	Linux/Android: driveinfo bugfix
	Android file download progress/speedup

version 0.82.04 ( 2015-08-28 )
	More debug messages
	jpeg contrast/hue/sharpness/saturation GUI bugfix
	Image tone bugfix (thx Mike Protts)
	Disable muted jpeg image tone for K-x because it's not working correctly
	Android build fixes
	Disable jpeg hue change for old cameras without jpeg hue setting
	Makefile code cleanup
	Project moved to github.com
	Update/addition of dlls to windows port
	Servermode documentation

version 0.82.02 ( 2015-06-28 )
	--pentax_debug_mode ( thx Samo Penic )
	Testing support for K-50